# rust_actum

./: Cargo.toml  test.http
migration/src/: lib.rs  m20251101_000001_create_api_table.rs  m20251101_000001_create_role_api_table.rs  m20251101_000001_create_role_table.rs  m20251101_000001_create_user_table.rs
src/: api.rs  main.rs  setup_role.rs  setup_user.rs
src/entities/: api.rs  dnc_user.rs  mod.rs  prelude.rs  role.rs  role_api.rs
