[package]
name = "dnc_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.28"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }

